[gd_scene load_steps=3 format=3 uid="uid://dvcbf06oh8ktt"]

[ext_resource type="Texture2D" uid="uid://dcrr1hnds7j5j" path="res://hand_demo/background.jpg" id="1_atob5"]
[ext_resource type="Script" path="res://hand_demo/main.gd" id="2_6vhe5"]

[node name="TextureRect" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_atob5")
expand_mode = 2
script = ExtResource("2_6vhe5")

[node name="HandZone" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -350.0
offset_top = -170.0
offset_right = 350.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0117647, 0.105882, 0.0627451, 0.678431)

[node name="HBoxContainer" type="HBoxContainer" parent="HandZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -170.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddCardButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add Card
"

[node name="RemoveFrontButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Remove Front"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AddCardButton" to="." method="_on_add_card_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RemoveFrontButton" to="." method="_on_remove_front_button_pressed"]
